--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
     "api": "json-server --host 0.0.0.0 --port 6060 --watch json-server/db.json --routes json-server/routes.json"
   },
   "dependencies": {
+    "core-js": "^3.6.4",
+    "echarts": "^4.7.0",
+    "echarts-liquidfill": "^2.0.5",
+    "highlight.js": "^10.0.0",
+    "sql-formatter": "^2.3.3",
+    "qs": "^6.9.3",
+    "markdown-it-vue": "^1.0.11",
     "@auth0/auth0-spa-js": "^2.0.1",
     "axios": "^0.27.2",
+    "codemirror": "^5.53.2",
+    "crypto-js": "^4.1.1",
+    "element-ui": "^2.15.13",
+    "less": "^4.1.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
   },
