--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "api": "json-server --host 0.0.0.0 --port 6060 --watch json-server/db.json --routes json-server/routes.json"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
-    "echarts": "^4.7.0",
-    "echarts-liquidfill": "^2.0.5",
-    "highlight.js": "^10.0.0",
-    "sql-formatter": "^2.3.3",
-    "qs": "^6.9.3",
-    "markdown-it-vue": "^1.0.11",
     "@auth0/auth0-spa-js": "^2.0.1",
+    "@vue/cli-plugin-typescript": "^5.0.8",
     "axios": "^0.27.2",
     "codemirror": "^5.53.2",
+    "core-js": "^3.6.4",
     "crypto-js": "^4.1.1",
+    "echarts": "^4.7.0",
+    "echarts-liquidfill": "^2.0.5",
     "element-ui": "^2.15.13",
+    "highlight.js": "^10.0.0",
     "less": "^4.1.3",
+    "markdown-it-vue": "^1.0.11",
+    "qs": "^6.9.3",
+    "require.js": "^1.0.0",
+    "sql-formatter": "^2.3.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3"
   },
   "devDependencies": {
+    "@vue/cli-plugin-typescript": "^3.3.0",
+    "@vue/cli-plugin-babel": "~4.2.0",
+    "@vue/cli-plugin-router": "~4.2.0",
+    "@vue/cli-service": "~4.2.0",
     "@vitejs/plugin-legacy": "^1.7.1",
     "@vue/runtime-dom": "^3.2.31",
     "eslint": "^8.17.0",
@@ -37,6 +43,10 @@
     "vite": "^2.8.4",
     "vite-plugin-vue2": "^1.9.3",
     "vue-template-babel-compiler": "^1.2.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "babel-plugin-component": "^1.1.1",
+    "less-loader": "^5.0.0",
+    "less": "^4.1.3",
+    "vue-cli-plugin-element": "^1.0.1"
   }
 }
